deployment.yaml
# [START container_helloapp_ingress]
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  namespace: hello-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: hello
spec:
  backend:
    serviceName: helloweb-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  namespace: hello-app
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
# [END container_helloapp_ingress]
---
# [START container_helloapp_service]
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: hello-app
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
# [END container_helloapp_service]
---
# [START container_helloapp_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  namespace: hello-app
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: HELLOWEB_IMAGE
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred  
# [END container_helloapp_deployment]
